# GrayscaleBlur

./: CMakeLists.txt  ImageProcessing.cpp  ImageProcessing.h  README.md  TestTask.cpp  TestTask.h  main.cpp
