cmake_minimum_required(VERSION 2.8)
project(grayscaleblur)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_FLAGS "-O2")
find_package(OpenCV REQUIRED)
add_executable(grayscaleblur main.cpp ImageProcessing.cpp TestTask.cpp)
target_link_libraries(grayscaleblur ${OpenCV_LIBS})
